--- a/common/components/TaskCard/style.module.scss
+++ b/common/components/TaskCard/style.module.scss
@@ -35,6 +35,34 @@
       color: var(--textColor);
     }
   }
+  @media (max-width: 668px) {
+    :global {
+      .ant-card-head-wrapper {
+        display: grid;
+        padding-bottom: 0;
+      }
+      .ant-card-extra {
+        padding-top: 0;
+      }
+    }
+  }
+  :global {
+    .ant-card-head-title {
+      white-space: normal;
+    }
+    .ant-card-extra {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+  @media (min-width: 1340px) {
+    :global {
+      .ant-card-extra {
+        margin-left: 0.5rem;
+        margin-right: auto;
+      }
+    }
+  }
 
   .TaskInfo {
     border-radius: 10px;
